--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,6 +59,7 @@ ul {
 
 .list-container {
   margin-top: 32px;
+  margin-bottom: 32px;
 }
 
 .images-list,
@@ -70,6 +71,7 @@ ul {
 
 .images-list {
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .image-item {
@@ -103,6 +105,30 @@ ul {
 
 .stats-item div > span:first-child {
   font-weight: bold;
+}
+
+.load-more-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.load-more-btn {
+  display: none;
+  border-radius: 4px;
+  border: none;
+  padding: 8px 16px;
+  width: 150px;
+  background-color: #4e75ff;
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.info {
+  display: none;
 }
 
 /* css-loader */
