--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,16 +62,16 @@ ul {
   margin-bottom: 32px;
 }
 
-.images-list,
-.stats-list {
+.images-list {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 24px;
 }
 
-.images-list {
-  flex-wrap: wrap;
-  width: 100%;
+.stats-list {
+  display: flex;
+  justify-content: space-around;
 }
 
 .image-item {
